@@ -5,8 +5,6 @@ This file is generated! See scripts/docs_collector.py
 [[metricbeat-metricset-kafka-consumergroup]]
 === Kafka consumergroup metricset
 
-beta[]
-
 include::../../../module/kafka/consumergroup/_meta/docs.asciidoc[]
 
 
